[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/WAT/assets/script.png" type="Texture" id=1]
[ext_resource path="res://addons/WAT/ui/scripts/test_menu.gd" type="Script" id=2]

[node name="TestMenu" type="Button"]
margin_left = 38.0
margin_right = 138.0
margin_bottom = 24.0
size_flags_horizontal = 0
action_mode = 0
text = "Select Test"
icon = ExtResource( 1 )
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Directories" type="PopupMenu" parent="."]
margin_left = -45.0
margin_top = -7.0
margin_right = -25.0
margin_bottom = 13.0
hide_on_state_item_selection = true

[node name="Tags" type="PopupMenu" parent="Directories"]
margin_right = 20.0
margin_bottom = 20.0

[node name="Scripts" type="PopupMenu" parent="Directories"]
margin_right = 20.0
margin_bottom = 20.0

[node name="Methods" type="PopupMenu" parent="Directories/Scripts"]
margin_right = 20.0
margin_bottom = 20.0

[node name="TagEditor" type="PopupMenu" parent="Directories/Scripts/Methods"]
margin_right = 16.0
margin_bottom = 16.0
focus_mode = 1
items = [ "Item 0", null, 0, true, false, 0, 0, null, "", false ]
hide_on_checkable_item_selection = false
[connection signal="pressed" from="." to="." method="_on_TestMenu_pressed"]
[connection signal="about_to_show" from="Directories" to="." method="_on_Directories_about_to_show"]
[connection signal="about_to_show" from="Directories/Tags" to="." method="_on_Tags_about_to_show"]
[connection signal="about_to_show" from="Directories/Scripts" to="." method="_on_Scripts_about_to_show"]
[connection signal="about_to_show" from="Directories/Scripts/Methods" to="." method="_on_Methods_about_to_show"]
[connection signal="about_to_show" from="Directories/Scripts/Methods/TagEditor" to="." method="_on_TagEditor_about_to_show"]
[connection signal="index_pressed" from="Directories/Scripts/Methods/TagEditor" to="." method="_on_TagEditor_index_pressed"]
